[gd_scene load_steps=12 format=3 uid="uid://cxbm0wayenbnt"]

[ext_resource type="Script" uid="uid://bbci3dnqenni6" path="res://Scenes/Gui/LevelCompleted/level_completed.gd" id="1_hdtc0"]
[ext_resource type="Texture2D" uid="uid://bdxh3x6tgtuk6" path="res://Assets/level_complete/stars.png" id="2_0luqf"]
[ext_resource type="Texture2D" uid="uid://cnl6r784d8cs4" path="res://Assets/level_complete/glow.png" id="2_rpji8"]
[ext_resource type="Texture2D" uid="uid://bkx5hvgg4u40m" path="res://Assets/level_complete/title_banner.png" id="3_def30"]
[ext_resource type="Texture2D" uid="uid://q0nl245bjvns" path="res://Assets/game_over/green_button.png" id="4_dkv61"]
[ext_resource type="Texture2D" uid="uid://c1i1vapi5oqnj" path="res://Assets/level_complete/coins_icon.png" id="5_0luqf"]
[ext_resource type="FontFile" uid="uid://cjofpiuwfbr7i" path="res://Assets/fonts/Lilita One Regular.ttf" id="5_2n123"]
[ext_resource type="PackedScene" uid="uid://cs6j1c2jh02o6" path="res://Scenes/Gui/RewardTwister/reward_twister.tscn" id="7_pnehs"]
[ext_resource type="Texture2D" uid="uid://p6ppfwxayl72" path="res://Assets/level_complete/coin.png" id="9_4klig"]

[sub_resource type="LabelSettings" id="LabelSettings_dssuf"]
font = ExtResource("5_2n123")
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_1s5vq"]
font = ExtResource("5_2n123")
font_size = 72

[node name="LevelComplete" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hdtc0")

[node name="Stars" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -308.0
offset_top = 117.0
offset_right = 308.0
offset_bottom = 535.0
grow_horizontal = 2
texture = ExtResource("2_0luqf")

[node name="Glow" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -369.0
offset_right = 369.0
offset_bottom = 442.0
grow_horizontal = 2
texture = ExtResource("2_rpji8")

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.5
offset_top = -375.0
offset_right = 276.5
offset_bottom = -173.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_def30")

[node name="CoinsIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -149.0
offset_right = 96.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_0luqf")

[node name="NextButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -136.5
offset_top = -123.0
offset_right = 136.5
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("4_dkv61")

[node name="Label" type="Label" parent="NextButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Продолжить"
label_settings = SubResource("LabelSettings_dssuf")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="RewardTwister" parent="." instance=ExtResource("7_pnehs")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = 137.0
offset_right = 230.0
offset_bottom = 487.0

[node name="LevelReward" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 40.0
offset_right = 20.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LevelReward"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -27.0
offset_right = 47.0
offset_bottom = 28.0
grow_vertical = 2
text = "100"
label_settings = SubResource("LabelSettings_1s5vq")
horizontal_alignment = 2
vertical_alignment = 1

[node name="CoinIcon" type="TextureRect" parent="LevelReward"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -31.0
offset_right = 81.0
offset_bottom = 31.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("9_4klig")

[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
